@@ -48,6 +48,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Fix packet filtering with low snaplen.
       Improve connection status reporting.
       Add support for promiscuous mode.
+      Detect DLTs and loopback capture support at run time.
     Hurd:
       Support network capture devices too.
       Fix a few device activation bugs.
